# temporal-workdir

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/temporal_workdir/: __init__.py  _temporal.py  _workspace.py
tests/: test_temporal.py  test_workspace.py
